kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app-deployment
  labels:
    app: php-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
        # main app
      - name: php-app-container
        image: codepreet/docker_php_multi_containers:03
        ports:
        - containerPort: 80

        #db persistance
      - name: db
        image: mysql:8.0
