kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app-service
spec:
  selector:
    app: php-app
  ports:
      - name: http
        port: 8500
        # targetPort: 80
        targetPort: php-app-port
  type: ClusterIP
