kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-app-ingress
  labels:
    app.kubernetes.io/name: php-app-ingress
spec:
  rules:
  - host: localk8slab.com #add this to /etc/hosts file or use valid domain
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: php-app-service
            port: 
              name: php-app-port
